# formless

./: .gitignore  Makefile  README.md  pyproject.toml  utils.py
api/: app.py
db/: models.py
db/migrations/: alembic.ini  env.py
frontend/: app.py
src/formless/: __init__.py
training/: etl.ipynb  etl.py  eval.py  explore.ipynb  finetune.py  finetune_ds.sh  llama3_2_vision-11B_lora_single_device.yaml  model.py  pyproject.toml  quantize.py  qwen2vl_full_sft.yaml  train.py
training/etl/: mathwriting_code_examples.ipynb
