[project]
name = "formless_training"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.16.3",
    "huggingface-hub[hf-transfer]>=0.27.1",
    "modal>=0.64.178",
    "ninja==1.11.1",
    "packaging==23.1",
    "pillow>=10.4.0",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "sentencepiece>=0.2.0",
    "timm>=1.0.14",
    "torch==2.5.1",
    "torchao>=0.7.0",
    "torchvision>=0.20.1",
    "tqdm==4.67.1",
    "transformers==4.45.2",
    "wandb>=0.19.4",
    "wheel==0.41.2",
]
