[project]
name = "formless-training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.2.1",
    "alembic>=1.14.0",
    "autoawq>=0.2.7.post3",
    "bitsandbytes>=0.45.1",
    "blobfile>=3.0.0",
    "boto>=2.49.0",
    "datasketch==1.6.5",
    "fastapi==0.115.6",
    "hf-transfer==0.1.8",
    "huggingface-hub[hf-transfer]>=0.27.1",
    "imagehash==4.3.1",
    "modal>=0.64.178",
    "more-itertools>=10.6.0",
    "ninja==1.11.1",
    "packaging==23.1",
    "pillow>=10.4.0",
    "deepspeed==0.16.3",
    "pre-commit>=4.0.1",
    "psycopg2-binary==2.9.10",
    "psycopg2==2.9.10",
    "pycairo==1.27.0",
    "pydantic==2.10.4",
    "pyspark==3.5.4",
    "python-dotenv>=1.0.1",
    "python-fasthtml==0.6.10",
    "python-magic>=0.4.27",
    "requests==2.32.3",
    "s3fs>=2024.12.0",
    "safetensors>=0.5.1",
    "sentencepiece>=0.2.0",
    "simpleicons==7.21.0",
    "sqlite-minutils==4.0.3",
    "sqlmodel==0.0.22",
    "stripe==11.1.0",
    "term-image==0.7.2",
    "tiktoken>=0.7.0",
    "timm>=1.0.14",
    "torch==2.5.1",
    "torchao>=0.7.0",
    "torchvision>=0.20.1",
    "tqdm==4.67.1",
    "validators==0.34.0",
    "wandb>=0.19.4",
    "wheel==0.41.2",
    "transformers==4.45.2",
    "vllm>=0.7.1",
    "outlines>=0.1.11",
    "hatchling>=1.22.5",
    "editables>=0.5",
    "deepspeed>=0.16.3",
    "flash-attn>=2.7.4.post1",
]